--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,6 @@ set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -Wno-switch -std=c++20")
 add_executable(read read.cc print.cc blf_reader.cc)
 target_link_libraries(read -lz )
 
+add_executable(object_types object_types.cc print.cc blf_reader.cc)
+target_link_libraries(object_types -lz )
+
