--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,6 @@ target_link_libraries(object_types -lz )
 
 add_executable(read_blf read_blf.cc print.cc blf_reader.cc)
 target_link_libraries(read_blf -lz )
+
+add_executable(read_can read_can.cc print.cc blf_reader.cc)
+target_link_libraries(read_can -lz )
