--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,15 @@ set(CXX_STANDARD 20)
 
 find_package(ZLIB)
 
-set(CMAKE_CXX_FLAGS "-Wall -Wno-switch -std=c++20 -Wno-deprecated-copy -Wdeprecated-enum-enum-conversion -Wmisleading-indentation -Wc++20-extensions  -Wshadow -Wconversion")
+if (MSVC)
+    # warning level 4
+    add_compile_options(/W4)
+else()
+    # additional warnings
+    add_compile_options(-Wall -Wno-switch -std=c++20 -Wno-deprecated-copy -Wdeprecated-enum-enum-conversion -Wmisleading-indentation -Wc++20-extensions  -Wshadow -Wconversion)
+endif()
+
+#set(CMAKE_CXX_FLAGS "-Wall -Wno-switch -std=c++20 -Wno-deprecated-copy -Wdeprecated-enum-enum-conversion -Wmisleading-indentation -Wc++20-extensions  -Wshadow -Wconversion")
 
 add_executable(read read.cc print.cc blf_reader.cc)
 target_link_libraries(read -lz )
