--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.31)
 
-project("lblf")
+project(lblf VERSION 0.3 LANGUAGES CXX)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_BUILD_TYPE Release)
@@ -9,33 +9,44 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
 
+set(CMAKE_CXX_STANDARD 20)
+set(CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-set(CXX_STANDARD 20)
 
-find_package(ZLIB)
+find_package(ZLIB REQUIRED)
 
 if (MSVC)
     # warning level 4
-    add_compile_options(/W4 /std:c++20)
+    add_compile_options(/W4)
 else()
     # additional warnings
-    add_compile_options(-Wall -Wno-switch -std=c++20 -Wno-deprecated-copy -Wdeprecated-enum-enum-conversion -Wmisleading-indentation -Wc++20-extensions  -Wshadow -Wconversion)
+    add_compile_options(-Wall -Wno-switch -Wno-deprecated-copy -Wdeprecated-enum-enum-conversion -Wmisleading-indentation -Wc++20-extensions  -Wshadow -Wconversion)
 endif()
+
+message(STATUS "CMake Version: ${CMAKE_VERSION}")
+message(STATUS "C++ Compiler: ${CMAKE_CXX_COMPILER}")
+message(STATUS "C++ Compiler Version: ${CMAKE_CXX_COMPILER_VERSION}")
+message(STATUS "C++ Standard: ${CMAKE_CXX_STANDARD}")
+message(STATUS "Build Type: ${CMAKE_BUILD_TYPE}")
+
 
 #set(CMAKE_CXX_FLAGS "-Wall -Wno-switch -std=c++20 -Wno-deprecated-copy -Wdeprecated-enum-enum-conversion -Wmisleading-indentation -Wc++20-extensions  -Wshadow -Wconversion")
 
 add_executable(read read.cc print.cc blf_reader.cc)
-target_link_libraries(read -lz )
+target_link_libraries(read PRIVATE ZLIB::ZLIB )
 
 add_executable(object_types object_types.cc print.cc blf_reader.cc)
-target_link_libraries(object_types -lz )
+target_link_libraries(object_types PRIVATE ZLIB::ZLIB )
 
 add_executable(read_blf read_blf.cc print.cc blf_reader.cc)
-target_link_libraries(read_blf -lz )
+target_link_libraries(read_blf PRIVATE ZLIB::ZLIB )
 
 add_executable(read_can read_can.cc print.cc blf_reader.cc)
-target_link_libraries(read_can -lz )
+target_link_libraries(read_can PRIVATE ZLIB::ZLIB )
 
 add_executable(read_filestatistics read_filestatistics.cc print.cc blf_reader.cc)
-target_link_libraries(read_filestatistics -lz )
+target_link_libraries(read_filestatistics PRIVATE ZLIB::ZLIB )
