modified:   build/data/SsetUp.cfg 	modified:   data/ChMap.cfg 	modified:   data/MsetUp.cfg 	modified:   data/SsetUp.cfg 	new file:   include/common_includes.h 	modified:   src/ChMap/ChannelMappingDialog.cpp 	modified:   src/ChMap/HwMappingWindow.cpp 	modified:   src/Configuration.cpp 	modified:   src/ConvertWindow.cpp 	modified:   src/GraphicWindow.cpp 	modified:   src/LoadingOverlay.cpp 	modified:   src/MainWindow.cpp 	modified:   src/Msetup/MSetupWindow.cpp 	modified:   src/Offline/OfflineModeWindow.cpp 	modified:   src/RunButton.cpp 	modified:   src/Sisetup/SimulationWindow.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ add_executable(CANtracing
     include/ConvertWindow.h
     include/ClickableLabel.h
     include/LoadingOverlay.h
+    include/common_includes.h
     lblf_reader/CanMessage.hpp
     lblf_reader/BlfReader.hpp
     lblf_reader/lblf/blf_reader.hh
