--- a/data/ChMap.cfg
+++ b/data/ChMap.cfg
@@ -6,56 +6,72 @@ BA\AppChannel=
 BA\Active=true
 BA\Hardware=Virtual Channel 2 | Serial: 100 | Bus: Unknown | Channel: 1
 BD\AppChannel=
-BD\Active=false
+BD\Active=true
 BD\Hardware=None
 CH\AppChannel=
-CH\Active=false
+CH\Active=true
 CH\Hardware=None
 DA\AppChannel=
-DA\Active=false
+DA\Active=true
 DA\Hardware=None
 IF\AppChannel=
-IF\Active=false
+IF\Active=true
 IF\Hardware=None
 Master\AppChannel=
 Master\Active=false
 Master\Hardware=None
 Net1FL\AppChannel=
-Net1FL\Active=false
+Net1FL\Active=true
 Net1FL\Hardware=None
 Net2FL\AppChannel=
-Net2FL\Active=false
+Net2FL\Active=true
 Net2FL\Hardware=None
 BA\Status=Active
 PT\Status=Active
-BA\LastUpdated=2025-05-30T18:23:51
-BD\Status=Inactive
-BD\LastUpdated=2025-05-30T18:23:51
-CH\Status=Inactive
-CH\LastUpdated=2025-05-30T18:23:51
-DA\Status=Inactive
-DA\LastUpdated=2025-05-30T18:23:51
-IF\Status=Inactive
-IF\LastUpdated=2025-05-30T18:23:51
+BA\LastUpdated=2025-06-02T16:49:37
+BD\Status=Active
+BD\LastUpdated=2025-06-02T16:49:37
+CH\Status=Active
+CH\LastUpdated=2025-06-02T16:49:37
+DA\Status=Active
+DA\LastUpdated=2025-06-02T16:49:37
+IF\Status=Active
+IF\LastUpdated=2025-06-02T16:49:37
 Master\Status=Inactive
-Master\LastUpdated=2025-05-30T18:23:51
-Net1FL\Status=Inactive
-Net1FL\LastUpdated=2025-05-30T18:23:51
-Net2FL\Status=Inactive
-Net2FL\LastUpdated=2025-05-30T18:23:51
-PT\LastUpdated=2025-05-30T18:23:51
+Master\LastUpdated=2025-06-02T16:49:37
+Net1FL\Status=Active
+Net1FL\LastUpdated=2025-06-02T16:49:37
+Net2FL\Status=Active
+Net2FL\LastUpdated=2025-06-02T16:49:37
+PT\LastUpdated=2025-06-02T16:49:37
 Ethernet1\AppChannel=
-Ethernet1\Active=false
+Ethernet1\Active=true
 Ethernet1\Hardware=None
-Ethernet1\Status=Inactive
-Ethernet1\LastUpdated=2025-05-30T18:23:51
+Ethernet1\Status=Active
+Ethernet1\LastUpdated=2025-06-02T16:49:37
 ETHERNETernet1\AppChannel=
 ETHERNETernet1\Active=false
 ETHERNETernet1\Hardware=
 ETHERNETernet1\Status=Inactive
-ETHERNETernet1\LastUpdated=2025-05-30T18:23:51
+ETHERNETernet1\LastUpdated=2025-06-02T16:49:37
+Ethernet2\AppChannel=
+Ethernet2\Active=true
+Ethernet2\Hardware=
+Ethernet2\Status=Active
+Ethernet2\LastUpdated=2025-06-02T16:49:37
+E1\AppChannel=
+E1\Active=true
+E1\Hardware=
+E1\Status=Active
+E1\LastUpdated=2025-06-02T16:49:37
+Ethernet3\AppChannel=
+Ethernet3\Active=true
+Ethernet3\Hardware=
+Ethernet3\Status=Active
+Ethernet3\LastUpdated=2025-06-02T16:49:37
+
 [Global]
 WindowVisible=true
 WindowSize=@Size(1000 500)
 WindowPosition=@Point(258 129)
-LastSaved=2025-05-30T18:23:51
+LastSaved=2025-06-02T16:49:37
