--- a/data/SsetUp.cfg
+++ b/data/SsetUp.cfg
@@ -116,7 +116,7 @@ tree\child0\child4\child3\child0\childCount=0
 tree\child0\child4\child4\text=🖧 Channels
 tree\child0\child4\child4\expanded=false
 tree\child0\child4\child4\childCount=0
-tree\child0\child5\text=Vehicle_Side_GW1 (Inactive)
+tree\child0\child5\text=DA
 tree\child0\child5\expanded=true
 tree\child0\child5\childCount=5
 tree\child0\child5\child0\text=🖧 Nodes
@@ -129,12 +129,12 @@ tree\child0\child5\child2\text=🖧 Replay blocks
 tree\child0\child5\child2\expanded=false
 tree\child0\child5\child2\childCount=0
 tree\child0\child5\child3\text=🖧 Databases
-tree\child0\child5\child3\expanded=false
-tree\child0\child5\child3\childCount=0
+tree\child0\child5\child3\expanded=true
+tree\child0\child5\child3\childCount=1
 tree\child0\child5\child4\text=🖧 Channels
 tree\child0\child5\child4\expanded=false
 tree\child0\child5\child4\childCount=0
-tree\child0\child6\text=ECU_side_GW1 (Inactive)
+tree\child0\child6\text=Vehicle_Side_GW1 (Inactive)
 tree\child0\child6\expanded=true
 tree\child0\child6\childCount=5
 tree\child0\child6\child0\text=🖧 Nodes
@@ -152,7 +152,7 @@ tree\child0\child6\child3\childCount=0
 tree\child0\child6\child4\text=🖧 Channels
 tree\child0\child6\child4\expanded=false
 tree\child0\child6\child4\childCount=0
-tree\child0\child7\text=Vehicle_side_GW2 (Inactive)
+tree\child0\child7\text=ECU_side_GW1 (Inactive)
 tree\child0\child7\expanded=true
 tree\child0\child7\childCount=5
 tree\child0\child7\child0\text=🖧 Nodes
@@ -170,7 +170,7 @@ tree\child0\child7\child3\childCount=0
 tree\child0\child7\child4\text=🖧 Channels
 tree\child0\child7\child4\expanded=false
 tree\child0\child7\child4\childCount=0
-tree\child0\child8\text=ECU_side_GW2 (Inactive)
+tree\child0\child8\text=Vehicle_side_GW2 (Inactive)
 tree\child0\child8\expanded=true
 tree\child0\child8\childCount=5
 tree\child0\child8\child0\text=🖧 Nodes
@@ -188,7 +188,7 @@ tree\child0\child8\child3\childCount=0
 tree\child0\child8\child4\text=🖧 Channels
 tree\child0\child8\child4\expanded=false
 tree\child0\child8\child4\childCount=0
-tree\child0\child9\text=DA
+tree\child0\child9\text=ECU_side_GW2 (Inactive)
 tree\child0\child9\expanded=true
 tree\child0\child9\childCount=5
 tree\child0\child9\child0\text=🖧 Nodes
@@ -201,8 +201,8 @@ tree\child0\child9\child2\text=🖧 Replay blocks
 tree\child0\child9\child2\expanded=false
 tree\child0\child9\child2\childCount=0
 tree\child0\child9\child3\text=🖧 Databases
-tree\child0\child9\child3\expanded=true
-tree\child0\child9\child3\childCount=1
+tree\child0\child9\child3\expanded=false
+tree\child0\child9\child3\childCount=0
 tree\child0\child9\child4\text=🖧 Channels
 tree\child0\child9\child4\expanded=false
 tree\child0\child9\child4\childCount=0
@@ -269,7 +269,7 @@ tree\child2\child1\child4\childCount=0
 tree\child3\text=🖧ETHERNET Network
 tree\child3\expanded=true
 tree\child3\childCount=1
-tree\child3\child0\text=E1
+tree\child3\child0\text=Ethernet1
 tree\child3\child0\expanded=true
 tree\child3\child0\childCount=5
 tree\child3\child0\child0\text=🖧 Nodes
@@ -287,7 +287,7 @@ tree\child3\child0\child3\childCount=0
 tree\child3\child0\child4\text=🖧 Channels
 tree\child3\child0\child4\expanded=false
 tree\child3\child0\child4\childCount=0
-tree\child0\child9\child3\child0\text=16_Diag_CAN_Matrix_v11.4.9.dbc
-tree\child0\child9\child3\child0\expanded=false
-tree\child0\child9\child3\child0\dbPath=C:/TASKS/DATA/ConfigVF67_Encrypted_DBC_11.4.9_V4.1/ConfigVF67_Encrypted_DBC_11.4.9_V4.1/NP_11.4.9.2/16_Diag_CAN_Matrix_v11.4.9.dbc
-tree\child0\child9\child3\child0\childCount=0
+tree\child0\child5\child3\child0\text=16_Diag_CAN_Matrix_v11.4.9.dbc
+tree\child0\child5\child3\child0\expanded=false
+tree\child0\child5\child3\child0\dbPath=C:/TASKS/DATA/ConfigVF67_Encrypted_DBC_11.4.9_V4.1/ConfigVF67_Encrypted_DBC_11.4.9_V4.1/NP_11.4.9.2/16_Diag_CAN_Matrix_v11.4.9.dbc
+tree\child0\child5\child3\child0\childCount=0
