--- a/data/MainW.cfg
+++ b/data/MainW.cfg
@@ -3,4 +3,4 @@ canStatisticsBlock=400,70
 dataBlock=400,160
 graphicsLoggingBlock=400,205
 traceBlock=400,115
-active_tab=Measurement Setup
+active_tab=Offline Mode
